# Optymalizacja

./: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  solution.cpp  solution.h  user_funs.cpp  user_funs.h
